# dugite

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
src/dugite/: app.py
src/dugite/assets/: README.md  lambda_function.py  requirements.txt  skeleton.txt
src/dugite/builders/: controllers.py  skeleton.py  supporting_files.py
src/dugite/cli/: commands.py
src/dugite/controllers/: builder.py
src/dugite/dependencies/: checker.py
